--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -22,6 +22,7 @@
 }
 
 .footer a {
+  color: #ffffff;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -123,7 +124,7 @@
   .code {
     background: #111;
   }
-  .logo img {
+  /* .logo img {
     filter: invert(1);
-  }
+  } */
 }
