--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,5 +1,5 @@
 html,
-body {
+body { 
   padding: 0;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
@@ -20,7 +20,38 @@ a {
     color-scheme: dark;
   }
   body {
-    color: white;
-    background: black;
+    color: black;
+    background: white;
   }
+}
+nav{
+  background-color: #ffbb00;
+  
+}
+
+nav h1{
+  font-weight: 700;
+}
+
+main{
+  background-color: #ffffff;
+}
+
+
+footer a:hover{
+  color: aliceblue;
+}
+
+footer{
+  background-color: #000000;
+  color: #797979;
+  display: flex;
+  flex: 1;
+  padding: 2rem 0;
+  border-top: 1px solid #ff0000;
+  justify-content: center;
+  align-items: center;
+  align-content: center;
+  
+  
 }
