--- a/styles/globals.css
+++ b/styles/globals.css
@@ -8,7 +8,7 @@ body {
 }
 svg{
   width: 30px;
-  color: #f70101;
+  color: #985ddc;
 }
 a {
   color: inherit;
@@ -35,7 +35,7 @@ a {
 nav {
   color: #ffffff;
   padding: 0px;
-  background-image: radial-gradient(circle at 120.71% 50%, #bb4cff 0, #8131ff 25%, #0013fd 50%, #0004e8 75%, #0012d6 100%);
+  /* background-image: radial-gradient(circle at 120.71% 50%, #bb4cff 0, #8131ff 25%, #0013fd 50%, #0004e8 75%, #0012d6 100%); */
 
   display: flex;
   flex-direction: column;
@@ -43,14 +43,14 @@ nav {
   align-items: center;
   gap: 20px;
   width: 100%;
-  height: 150px;
+  height: 250px;
 
 }
 nav span{
   color: #000000;
 }
 nav h1 {
-  
+  color: #985ddc;
   font-weight: 700;
 }
 
@@ -60,9 +60,11 @@ padding: 20px;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
+  align-items: center;
 }
 
-.nav-links{     
+.nav-links{
+  z-index: 1000;     
   width: 100%;
   height: 40px;
   background-color: #000000;
@@ -97,7 +99,7 @@ padding: 20px;
 
 }
 .nav-links li:hover{
-  background-color: #0012d7;
+  background-color: #985ddc;
   color: #ffffff;  
 
 }
