--- a/styles/globals.css
+++ b/styles/globals.css
@@ -6,10 +6,12 @@ body {
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
 }
-svg{
+
+svg {
   width: 30px;
   color: #985ddc;
 }
+
 a {
   color: inherit;
   text-decoration: none;
@@ -44,18 +46,19 @@ nav {
   gap: 20px;
   width: 100%;
   height: 250px;
-
 }
-nav span{
+
+nav span {
   color: #000000;
 }
+
 nav h1 {
   color: #985ddc;
   font-weight: 700;
 }
 
-.nav-marca{
-padding: 20px;
+.nav-marca {
+  padding: 20px;
   width: 100%;
   display: flex;
   flex-direction: row;
@@ -63,75 +66,58 @@ padding: 20px;
   align-items: center;
 }
 
-.nav-links{
-  z-index: 1000;     
+.nav-links {
+  display: flex;
+  justify-content: center;
+  z-index: 1000;
   width: 100%;
   height: 40px;
   background-color: #000000;
   color: #d9d9d9;
-} 
-.nav-links{   
+
+}
+
+.nav-links {
   position: sticky;
   top: 0;
-  
-} 
+}
+
 .nav-links ul {
   width: 100%;
   height: 40px;
-	display: flex;
+  display: flex;
   align-items: center;
   align-content: center;
-  justify-content:flex-start;
+  justify-content: flex-start;
   gap: 10px;
 }
 
 .nav-links ul li {
-  
-	list-style-type: none;
-    padding-right: 14px;
-
+  list-style-type: none;
+  padding-right: 14px;
 }
-.nav-links li{
-  background-color: rgb(17, 17, 17);
+
+.nav-links li {
+  background-color: rgb(29, 29, 29);
   padding: 5px;
-  border-radius: 5px;
+  border-radius: 3px;
   width: 90px;
-
+  height: 30px;
+  /* border: 1px solid #8f8f8f; */
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
-.nav-links li:hover{
-  background-color: #985ddc;
-  color: #ffffff;  
 
+.nav-links li:hover {
+  background-color: #985ddc;
+  color: #ffffff;
 }
 
 main {
   border-radius: 0px;
   background: linear-gradient(145deg, #e6e6e6, #ffffff);
-  box-shadow: 29px 29px 69px #dbdbdb,
-    -29px -29px 69px #ffffff;
-
-}
-
-
-footer a:hover {
-  color: aliceblue;
-}
-
-footer {
-  
-  right: 0;
-  width: 100%;
-  background-color: #000000;
-  color: #797979;
-  display: flex;
-  flex: 1;
-  padding: 2rem 0;
-  border-top: 1px solid #ff0000;
-  justify-content: center;
-  align-items: center;
-  align-content: center;
-
-
+  box-shadow: 29px 29px 69px #dbdbdb, -29px -29px 69px #ffffff;
 }
 
 .container {
@@ -143,8 +129,7 @@ footer {
 .card-blog {
   border-radius: 10px;
   background: linear-gradient(145deg, #e6e6e6, #ffffff);
-  box-shadow: 5px 5px 4px #d9d9d9,
-    -5px -5px 4px #ffffff;
+  box-shadow: 5px 5px 4px #d9d9d9, -5px -5px 4px #ffffff;
 
   display: flex;
   flex-direction: row;
@@ -156,7 +141,6 @@ footer {
   margin-bottom: 20px;
   padding: 10px;
   /* border: 1px solid rgba(82, 82, 82, 0.363); */
-
 }
 
 /*! conteudo */
@@ -184,20 +168,18 @@ footer {
 .card-blog-thumbnail {
   display: flex;
   align-items: center;
-  justify-content:flex-end;
+  justify-content: flex-end;
   width: 50%;
   background-color: #ff000000;
-
 }
+
 .card-blog-thumbnail img {
-  width: 100%;  
+  width: 100%;
 }
-
 
 /* imagem */
 
 ._app {
-
   width: 100%;
   height: 100vh;
   background-color: #ffffff;
@@ -205,9 +187,45 @@ footer {
 
 /*! pagina do post*/
 
-.mt-4{
+.mt-4 {
   background-color: #ffffff;
   padding: 15px;
 }
 
 /* pagina do post*/
+
+
+footer a:hover {
+  color: aliceblue;
+}
+
+footer {  
+ font-weight: bold;
+  right: 0;
+  width: 100%;
+  height: 50px; 
+  color: #9427c7;
+  display: flex;
+  flex: 1;
+  padding: 2rem 0;
+  border-top: 3px solid #985DDC;
+  background-color: #985DDC;
+  justify-content: center;
+  align-items: center;
+  align-content: center;
+  gap: 20px;  
+}
+.footer-texto{
+  display: flex;
+  align-items: center;
+}
+
+.footer-link{
+  display: flex;
+  align-items: center;
+}
+
+
+
+/*FOOTER*/
+
