--- a/styles/globals.css
+++ b/styles/globals.css
@@ -209,7 +209,8 @@ main {
 
 .btn-post {
   margin-top: 15px;
-  padding-top: 15px;
+  margin-bottom: 15px;
+  padding-top: 5px;
   width: 170px;
   height: auto;
 
@@ -269,7 +270,16 @@ footer {
   display: flex;
   align-items: center;
 }
-
-
-
 /*FOOTER*/
+
+
+.pg404{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  height: 100%;
+}
+.pg404 h3{
+  margin: 50px;
+}
